--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
